@@ -1,6 +1,9 @@
 Changes between 1.2.1 and 1.2.0
 =====================================
 
+- add a new option "--funcargs" that shows available funcargs 
+  and their help strings (docstrings on the factory) for a
+  given test path
 - display a short and concise traceback if a funcarg lookup fails 
 - early-load "test*/conftest.py" files, i.e. conftest.py files in
   directories starting with 'test'.  allows to conveniently keep and access
